<resources>
    <!--Add Unit-->
    <string name="ad_unit_banner">ca-app-pub-6603190689104907/4077371277</string>
    <string name="ad_unit_full">ca-app-pub-6603190689104907/9984304074</string>
    <string name="fb_open_uri">fb://profile/100000131498012</string>
    <string name="fb_open_url">https://www.facebook.com/ltbaogt</string>
    <string name="app_name">VReminder</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>
    <string name="action_filter_raw_word">Filter Raw Words</string>
    <string name="action_filter_no_filter">No Filter</string>

    <string name="add_new_word_suggestion">Please add your word by pressing Add button</string>
    <string name="action_add">Add New Word</string>
    <string name="popup_title_new_word">Add new Word</string>
    <string name="popup_title_edit_word">Edit Word</string>
    <string name="popup_button_cancel_word">Cancel</string>
    <string name="popup_button_new_word">Add</string>
    <string name="popup_button_edit_word">Edit</string>
    <string name="btn_ok">OK</string>
    <string name="clean_up_vocabularies">Are you sure to perform this action ?</string>
    <string name="btn_discard">Discard</string>
    <string name="word_is_empty">Word name must be not empty</string>
    <string name="word_not_found">Word is not found</string>
    <string name="word_name">New word</string>
    <string name="word_meaning">Meaning</string>
    <string name="word_sentence">Sentence</string>
    <string name="action_preview">Preview</string>
    <string name="message_word_was_deleted">You deleted %s</string>
    <string name="message_word_was_archived">You archived %s</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_vocabularies">Vocabularies</string>
    <string name="popup_title_backup_vocabularies">Backup your vocabularies</string>
    <string name="popup_title_restore_vocabularies">Restore your vocabularies</string>
    <string name="setting_title_choose_color">Choose Color</string>
    <string name="item_word_delete">Delete</string>
    <string name="you_are_offline">You Are Offline</string>
    <string name="splash_name">Voca Reminder</string>
    <string name="splash_slogan">Build your dictionary</string>
    <string name="nav_about">About</string>
    <string name="developer_email">Email: ltbaogt@gmail.com</string>
    <string name="short_description">&#160;&#160;Với mục đích giúp các bạn có thể bổ sung từ vựng mọi lúc mọi nơi và học chúng một cách dễ dàng nhất nên mình đã viết ra ứng dụng nhắc nhở này. Ứng dụng như một công cụ nhắc nhở từ mới cho bạn mỗi khi unlock điện thoại, không mất thời gian để học miệt mài.\nĐừng lãng phí mỗi lần unlock điện thoai mà hãy tận dụng chúng để bổ sung tự vựng cho mình.</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_rate">LOVE ME</string>
    <string name="share_via">Share via</string>
    <string name="snackbar_button_undo">UNDO</string>
    <string name="snackbar_word_restored">Word %1s is restored</string>
    <string name="pronunciation_you_can">I\'m listening</string>
    <string name="nav_hello">Hello</string>
    <string name="popup_title_explain_why_grant_write_external_storage">In order to perform Backup/Restore, you need grant app read/write your external storage.</string>
    <string name="snackbar_backup_completed">Backup is completed</string>
    <string name="snackbar_restore_completed">Restore is completed</string>
    <string name="action_bar_vocabularies">Vocabularies</string>
    <string name="action_bar_setting">Setting</string>
    <string name="action_bar_archived">Archived</string>
    <string name="action_bar_about">About</string>
    <string name="choose_meaning_from_list">Choose suggested meaning from below:</string>
    <string name="restore_pernalty">Your database is not empty\nDo you want to delete permanently ?</string>
    <string name="sg_tittle">Search suggestions for <b>%1s</b></string>
    <string name="similar_words">These words with similar spellings or pronunciations:</string>
    <string name="startapp_id">209856859</string>
    <string name="action_language_vi">Vi</string>
    <string name="action_language_en">En</string>
    <string name="cannot_get_information">Cannot retrieve information</string>
    <string name="dont_download_yet">You have\'t downloaded sound yet</string>
    <string name="this_word_have_not_sound">Sorry. This word doesn\'t have sound file</string>
    <string name="general_setting">General Setting</string>
    <string name="reminder_on_off">Reminder OFF/ON</string>
    <string name="time_to_dismiss">Dismiss reminder in:</string>
    <string name="five_seconds">5s</string>
    <string name="choose_theme_color">Choose color reminder\'s background</string>
    <string name="clean_up_vocabularies_title">Clean up vocabularies</string>
    <string name="clean_up_description">Clean up your vocabularies, all data will be eased</string>
    <string name="backup_title">Backup your vocabularies</string>
    <string name="restore_title">Restore your vocabularies</string>
    <string name="quick_add_toggle_title">Quick add through notification</string>
    <string name="quick_add_desription">Notification is always show to add new word quickly</string>
    <string name="backup_and_restore_title">Backup and Restore</string>
    <string name="notificaion_title">Notification</string>
    <string name="version_string">Version: %1$s %2$d</string>

</resources>
