<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_preview"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_preview"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter_raw_word"
        android:orderInCategory="100"
        android:title="@string/action_filter_raw_word"
        app:showAsAction="never" />
</menu>
