<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/img_logo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/drawable_about"/>
            <TextView
                android:layout_below="@id/img_logo"
                android:id="@+id/tv_short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/short_description" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_short_description"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/developer_email" />

            <Button
                android:background="@drawable/button_about_state"
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tv_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:textColor="@android:color/white"
                android:text="@string/btn_share" />

            <Button
                android:background="@drawable/button_about_state"
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/btn_share"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_rate" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>